--- a/flex/02-flex-header/index.html
+++ b/flex/02-flex-header/index.html
@@ -9,19 +9,19 @@
   </head>
   <body>
     <div class="header">
-      <div class="left-links">
+      <div left-links>
         <ul>
-          <li><a href="#">ONE</a></li>
-          <li><a href="#">TWO</a></li>
-          <li><a href="#">THREE</a></li>
+          <li class="left-individual"><a href="#">ONE</a></li>
+          <li class="left-individual"><a href="#">TWO</a></li>
+          <li class="left-individual"><a href="#">THREE</a></li>
         </ul>
       </div>
       <div class="logo">LOGO</div>
       <div class="right-links">
         <ul>
-          <li><a href="#">FOUR</a></li>
-          <li><a href="#">FIVE</a></li>
-          <li><a href="#">SIX</a></li>
+          <li class="right-individual"><a href="#">FOUR</a></li>
+          <li class="right-individual"><a href="#">FIVE</a></li>
+          <li class="right-individual"><a href="#">SIX</a></li>
         </ul>
       </div>
     </div>
